# VSRGproglab

./: .replit  docker-compose.yml  dockerfile  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: django-ci.yml  django.yml
django_project/: asgi.py  settings.py  urls.py
main/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
main/management/commands/: add_maps.py
main/migrations/: 0001_initial.py  0002_remove_gamemap_dislikes_remove_gamemap_game_and_more.py  0003_gamemap_dislikes_gamemap_likes.py
main/static/css/: history_style.css  library_style.css  main.css  main_style.css  vote_style.css
main/templates/: history.html  library.html  login.html  mainpage.html  register.html
