[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
packages = [
    { include = "django_project" },
    { include = "main" }
]

[tool.poetry.dependencies]
Django = "^5.0"
python = "^3.10"
channels = "^4.2.2"
daphne = "^4.2.0"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
black = "^23.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"